chore: atualiza documentação
